# MyLittleHarness

./: AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml
.agents/: docmap.yaml
.mylittleharness/: project-workflow.toml
build_backend/: mylittleharness_build.py
docs/: README.md  external-audit-prep.md  security.md
docs/architecture/: layer-model.md  product-architecture.md
docs/reference/: command-surface.md
docs/specs/: adapter-boundary.md  attach-repair-status-cli.md  authority-and-memory.md  context-and-ceremony-budget.md  generated-state-and-projections.md  generated-state-search-and-sqlite.md  metadata-routing-and-evidence.md  operating-root.md  product-boundary.md
project/: project-state.md
src/mylittleharness/: __init__.py  adapter.py  agent_roles.py  approval_decisions.py  approval_packets.py  atomic_files.py  checks.py  claims.py  cli.py  cli_parser.py  closeout.py  command_discovery.py  context_memory.py  daemon.py  dashboard.py  evidence.py  handoff.py  hooks.py  incubate.py  inventory.py  lifecycle_focus.py  lifecycle_metadata.py  memory_hygiene.py  meta_feedback.py  models.py  parsing.py  planning.py  preflight.py  product_hygiene_checks.py  projection.py  projection_artifacts.py  projection_index.py  reconcile.py  (+17 more)
tests/: test_cli.py  test_cli_parser.py  test_inventory.py  test_memory_hygiene.py  test_package_metadata.py  test_planning.py  test_projection.py  test_projection_artifacts.py  test_projection_index.py  test_relationship_drift.py  test_release_lifecycle_ux.py  test_research_distill.py  test_research_intake.py
(+7 files in other folders)
