[build-system]
requires = []
build-backend = "mylittleharness_build"
backend-path = ["build_backend"]

[project]
name = "mylittleharness"
version = "1.0.1"
description = "Repo-visible workflow safety utility for initializing, checking, repairing, and navigating MyLittleHarness target repositories."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
mylittleharness = "mylittleharness.cli:main"

[tool.mylittleharness.dependency-gate]
default_policy = "stdlib-first"
external_dependency_additions = "approval-packet-required"
required_evidence = ["package-smoke", "license-supply-chain-review", "no-telemetry", "rollback-plan"]
future_spikes = ["marko", "patch-ng", "portalocker", "msgspec"]
